# goldendata

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  mcp_server.py
backend/app/core/: config.py  db.py  deps.py  doctext.py  ia.py  masking.py  mcp_oauth.py  rag.py  security_keycloak.py  security_local.py  supabase_admin.py
backend/app/domain/assistente/: conformidade.py  copiloto.py  router.py
backend/app/domain/cockpit/: router.py  service.py
backend/app/domain/conhecimento/: router.py  schemas.py  service.py
backend/app/domain/deliberacoes/: router.py  schemas.py  service.py
backend/app/domain/demandas/: router.py  schemas.py  service.py
backend/app/domain/encaminhamentos/: router.py  schemas.py  service.py
backend/app/domain/evaluation/: gate.py  metrics_runner.py  router.py  schemas.py  service.py
backend/app/domain/governance/: router.py
backend/app/domain/incidentes/: router.py  schemas.py  service.py
backend/app/domain/iniciativas/: router.py  schemas.py  service.py
backend/app/domain/registry/: router.py  schemas.py  service.py
backend/app/metrics/: __init__.py  citation_check.py  edit_distance.py  pii.py  similarity.py
backend/app/workers/: eval_worker.py
backend/tests/: test_comentario_schema.py  test_config_guards.py  test_conformidade.py  test_copiloto.py  test_doctext.py  test_gate.py  test_gate_compliance.py  test_ia_client.py  test_masking.py  test_metrics.py  test_pii.py  test_rag.py  test_security_local.py
db/: init.sh
(+100 files in other folders)
